Users can receive a callback on initialization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rxdart: ^0.24.1
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
