--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="net.realapps.nativewidget_example">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -7,6 +8,7 @@
     <application
         android:name=".Application"
         android:icon="@mipmap/ic_launcher"
+        tools:replace="android:label"
         android:label="nativewidget_example">
 
 
@@ -67,11 +69,9 @@
         </activity>
         <!--
  Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java
-        -->
+             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-
 </manifest>
